# thor_mang_power_module

./: README.md
battery_sensor/: Power_Measure_Arduino.ino  README.md
battery_sensor/battery_sensor_arduino/: CMakeLists.txt  package.xml
battery_sensor/battery_sensor_arduino/firmware/: CMakeLists.txt  program.cpp
battery_sensor/battery_sensor_arduino/lib/: Sensor.cpp  Sensor.h
battery_sensor/battery_sensor_msgs/: CMakeLists.txt  package.xml
battery_sensor/battery_sensor_msgs/msg/: ListMeasures.msg  Measures.msg
battery_sensor/battery_sensor_pc/: CMakeLists.txt  package.xml
battery_sensor/battery_sensor_pc/src/: listener.cpp
batterysensor/: README.md  README.md~
batterysensor/batterysensor_arduino/: CMakeLists.txt  package.xml  package.xml~
batterysensor/batterysensor_arduino/firmware/: CMakeLists.txt  CMakeLists.txt~  program.cpp
batterysensor/batterysensor_msgs/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
batterysensor/batterysensor_msgs/msg/: Measures.msg
test/helloworld/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
test/helloworld/firmware/: CMakeLists.txt~  chatter.cpp
